--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ url                      : "https://Hyungjung-Lee.github.io"
 baseurl                  : ""
 repository               : "Hyungjung-Lee/Hyungjung-Lee.github.io"
 teaser                   : "/assets/images/avatar.jpeg"
-logo                     : "/assets/images/avatar.jpeg"
-masthead_title           : "test"
+logo                     : #"/assets/images/avatar.jpeg"
+masthead_title           : "TBD"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
