--- a/_config.yml
+++ b/_config.yml
@@ -290,9 +290,9 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
 
 header:
-  image: /assets/images/wallpaper.jpg
+  teaser: /assets/images/wallpaper.jpg
