--- a/_config.yml
+++ b/_config.yml
@@ -294,5 +294,11 @@ defaults:
       share: true
       related: true
 
+excerpt: "This post should [...]"
 header:
-  teaser: /assets/images/wallpaper.jpg
+  overlay_image: /assets/images/wallpaper.jpg
+  overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  actions:
+    - label: "More Info"
+      url: "https://unsplash.com"
