--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
-  - title: "Programing"
-    url: /programing/
+  - title: "Category"
+    url: /categories/
   - title: "Search"
     url: /search/
