--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Hyungjung Lee"
   avatar           : "/assets/images/avatar.jpeg"
-  bio              : "normal programmer."
+  bio              : "programmer."
   location         : "bundang-gu seongnam-si gyeonggi-do korea"
   email            :
   links:
