--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Hyungjung Lee"
-  avatar           : "/assets/images/avatar.jpeg"
+  avatar           : "/assets/images/me.png"
   bio              : "programmer."
   location         : "gyeonggi do, south korea"
   email            : "lhj5772@me.com"
