--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@
 
 #theme                    : "jekyll-theme-architect"
 remote_theme             : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "TBD"
+title                    : "Blog"
 title_separator          : "-"
 name                     : "Hyungjung Lee"
 description              : "My blog."
@@ -40,7 +40,7 @@ comments:
     num_posts            : # 5 (default)
     colorscheme          : # "dark" (default), "dark"
   utterances:
-    theme                : github-dark
+    theme                : github-light
     issue_term           : "pathname"
 staticman:
   allowedFields          : # ['name', 'email', 'url', 'message']
