--- a/_config.yml
+++ b/_config.yml
@@ -108,8 +108,8 @@ analytics:
 author:
   name             : "Hyungjung Lee"
   avatar           : "/assets/images/me.png"
-  bio              : "programmer."
-  location         : "gyeonggi do, south korea"
+  bio              : "Software Engineer"
+  location         : "Gyeonggi Do, South Korea"
   email            : "lhj5772@me.com"
   links:
     - label: "Email"
