--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ comments:
     num_posts            : # 5 (default)
     colorscheme          : # "dark" (default), "dark"
   utterances:
-    theme                : github-dark
+    theme                : "github-light"
     issue_term           : "pathname"
 staticman:
   allowedFields          : # ['name', 'email', 'url', 'message']
